# translation_tool

./: .env  Cargo.toml  README.md  Translation-Tool.postman_collection.json
migrations/2020-12-29-144433_create_translations/: down.sql  up.sql
migrations/2021-01-17-085327_create_languages/: down.sql  up.sql
src/: languages.rs  main.rs  models.rs  repository.rs  schema.rs  translation.rs
src/models/: languages.rs  mod.rs  translations.rs
src/repositories/: languages.rs  mod.rs  translations.rs
