[package]
name = "translation_tool"
version = "0.1.0"
authors = ["Marc Breitung <info@marcbreitung.de>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.15"
env_logger = "0.8"
